# Sepple

./: .gitignore  Cargo.toml  README.md  dictionary.json  flake.nix  pyproject.toml
model/: added_tokens.json  config.json  tokenizer_config.json  vocab.json
multipa-model/: Cargo.toml  build.rs
multipa-model/src/: lib.rs
python/: export.py  main.py  test.py  test_silero.py
src/: assert_string_printer.rs  capture.rs  chunker.rs  decipher.py  dictionary.rs  ipa_processor.rs  ipa_recognizer.rs  ipapipeline.rs  iparecognizer.rs  main.py  main.rs  memory_audio_source.rs  pipeline.rs  silero_vad_scorer.rs  sliding_window.rs  timestamped_vec.rs  units.rs  util.rs  vad.rs  vad_filter.rs  word_detector.rs
src/debug/: assert_string_printer.rs  audio_logger.rs  mod.rs
src/pipeline/consumer/: mod.rs  value_printer.rs
src/pipeline/processor/: ipa_processor.rs  mod.rs  sliding_window.rs  vad_filter.rs  word_detector.rs
src/pipeline/producer/: mod.rs
