[package]
name = "sepple"
version.workspace = true
edition.workspace = true

[workspace]
members = ["multipa-model"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
burn = { version = "~0.21", features = ["flex"] }
burn-store = "~0.21"
burn-onnx = "~0.21"

[dependencies]
burn.workspace = true
burn-store.workspace = true
multipa-model = { path = "./multipa-model" }

hound = "3.5.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
cpal = "0.17.3"
strsim = "0.11.1"
unicode-segmentation = "1.13.3"
