[project]
name = "sepple"
version = "0.1.0"
requires-python = ">=3.14.0"
dependencies = [
    "levenshtein>=0.27.3",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers[torch]>=5.3.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
