[project]
name = "sepple"
version = "0.1.0"
requires-python = ">=3.14.0"
dependencies = [
    "numpy>=2.4.3",
    "onnx>=1.21.0",
    "onnxruntime>=1.26.0",
    "onnxscript>=0.7.0",
    "onnxsim>=0.6.4",
    "pyaudio>=0.2.14",
    "torch>=2.9.1",
    "torchaudio>=2.11.0",
    "torchcodec>=0.14.0",
    "transformers[torch]>=5.3.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchaudio = [{ index = "pytorch-cpu" }]
torchcodec = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
